--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reptopia2-backend",
+  "name": "reptopia-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "reptopia2-backend"
+    "url": "reptopia-server"
   },
   "author": "",
   "license": "ISC",
